# pySigma-backend-qradar

./: .gitignore  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: release.yml
sigma/backends/qradar/: __init__.py  qradar.py
sigma/pipelines/qradar/: __init__.py  qradar.py
sigma/pipelines/splunk/: __init__.py
tests/: test_backend_qradar.py  test_qradar_pipelines.py
