[tool.poetry]
name = "pysigma-backend-qradar"
version = "0.3.2"
description = "pySigma Qradar backend"
authors = ["nNipsx-Sec <nnipsxz@gmail.com>"]
license = "LGPL-2.1-only"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.9.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
